# strava-stats

./: .gitignore  .mise.toml  CLAUDE.md  vercel.json
.beads/: issues.jsonl
.claude/: settings.json  settings.local.json
.github/workflows/: android.yml  backend.yml
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .env.example  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
backend/api/: activities.rs  activities.ts  webhook.rs  webhook.ts
backend/api/auth/: strava.ts
backend/api/auth/strava/: callback.ts
backend/scripts/: backfill-activities.ts
backend/src/: main.rs  webhook.rs
docs/prd/: 2025-12-16-initial-scope.md
supabase/: config.toml
supabase/migrations/: 00001_initial_schema.sql  00002_activity_details.sql
webapp/: README.md  env.d.ts  package.json  pnpm-lock.yaml
webapp/src/: App.vue  main.ts
webapp/src/assets/: base.css  main.css
webapp/src/components/: ActivityMiniMap.vue  ErrorBoundary.vue  SkeletonLoader.vue  SportStats.vue  ToastNotification.vue  YearSelector.vue
webapp/src/composables/: useActivityYears.ts
webapp/src/layouts/: DashboardLayout.vue
webapp/src/lib/: aggregations.ts  firebase.ts  fitnessModel.ts  powerCurve.ts  sportConfig.ts
webapp/src/router/: index.ts
webapp/src/services/: activitiesService.ts
webapp/src/stores/: activities.ts  auth.ts  toast.ts
webapp/src/types/: activity.ts
webapp/src/views/: ActivitiesListView.vue  ActivityDetailView.vue  DashboardView.vue  LoginView.vue  MonthlyFitnessView.vue  (+4 more)
(+19 files in other folders)
