[package]
name = "strava-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# Supabase/PostgreSQL
postgrest = "1"

# Vercel runtime
vercel_runtime = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "strava-backend"
path = "src/main.rs"
