[package]
name = "strava-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
reqwest = { version = "0.11", features = ["json"] }
http = "1"

# Vercel runtime
vercel_runtime = "1"

[[bin]]
name = "webhook"
path = "api/webhook.rs"

[[bin]]
name = "activities"
path = "api/activities.rs"
